== 2.7.21 ==
Release date: 
* Enhancement: Team Member - Added X icons to recommended list
* Security Fix: Link Effects - Improved code security

== 2.7.20 ==
Release date: May 29, 2024
* Fixed: Info Grid & Carousel - Pause on Hover option was not working
* Fixed: Info Grid & Carousel - Equal Height option for Coverflow effect
* Security Fix: Animated Gradient Background - Improved code security

== 2.7.19 ==
Release date: March 27, 2024
* Fixed: Info Box - Icon hover Border Color option was not working
* Fixed: Fluent Forms - Submit button alignment was not working
* Fixed: Fluent Forms - Option to hide the labels was not working

== 2.7.18 ==
Release date: March 18, 2024
* Fixed: Counter - Subtitle was not showing in editor
* Fixed: Info Box - Image shrink issue with left and right alignment
* Security Fix: Improved code security in PowerPack widgets

== 2.7.17 ==
Release date: March 1, 2024
* Fixed: Team Member Carousel - JS error in editor when link is added
* Fixed: Display Conditions - JS error in editor when display condition used on a container

== 2.7.16 ==
Release date: February 14, 2024
* Enhancement: Dual Heading - Added Text Stroke option
* Enhancement: Fancy Heading - Added Text Stroke option
* Enhancement: Info Box - Added Text Stroke option for Title and Subtitle
* Enhancement: Info Grid & Carousel - Added Text Stroke option for Title and Subtitle
* Enhancement: Info Grid & Carousel - Added Text Shadow option for Title and Subtitle
* Enhancement: Icon List - Added Adjust Vertical Position option

== 2.7.15 ==
Release date: February 2, 2024
* Fixed: Compatibility issues with WPML and PHP 8
* Security Fix: Improved code security in PowerPack widgets

== 2.7.14 ==
Release date: December 29, 2023
* Fixed: Advanced Posts - Carousel layout was not working in the Elementor editor
* Security Fix: Improved code security on PowerPack settings page

== 2.7.13 ==
Release date: December 12, 2023